[metadata]
name = lingtrain-aligner
version = 1.0.3
author = Sergei Averkiev
author_email = averoo@gmail.com
description = Alignment tool for texts in different languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/averkij/lingtrain-aligner
project_urls =
    Bug Tracker = https://github.com/averkij/lingtrain-aligner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src